src/objects/TR1__Associated_Qualification__c.object
<CustomObject>
    <fields>
        <fullName>AQ_Banner__c</fullName>
        <formula>IMAGE( 
CASE( 
 TR1__Status__c  , 
&quot;Requested&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004sWBh&quot;, 
&quot;Submitted&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004sWBm&quot;, 
&quot;In Progress&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004sWBr&quot;, 
&quot;Active&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004sWBw&quot;, 
&quot;Rejected&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004sWC1&quot;, 
&quot;Expired&quot;, &quot;/servlet/servlet.FileDownload?file=0154I000004sWC6&quot;, 
&quot;/servlet/servlet.FileDownload?file=0154I000004Ux4o&quot; 
), 
&quot;/servlet/servlet.FileDownload?file=0154I000004Ux4o&quot; 
)</formula>
        <label>AQ Banner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Any_relevant_qualifications_checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relevant Qualifications Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Barred_Check_URL__c</fullName>
        <defaultValue>&apos;https://www.tponline.co.uk/web.chi/barredcheck.html&apos;</defaultValue>
        <label>Barred Check URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Barred_List_Date_Checked__c</fullName>
        <label>Barred List Date Checked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Barred_List_Expiration_Date__c</fullName>
        <formula>Barred_List_Date_Checked__c  + 366</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Barred List Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Barred_List_Expiry_Date_New__c</fullName>
        <label>Barred List Expiry Date (New)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Barred_List_Results__c</fullName>
        <label>Barred List Results</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Possible Match</fullName>
                </value>
                <value>
                    <fullName>Results Found</fullName>
                </value>
                <value>
                    <fullName>No Matching Results Found</fullName>
                </value>
                <value>
                    <fullName>Call For More Information</fullName>
                    <isActive>false</isActive>
                    <label>Call For More Information</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Barred_List_Submitted_Date__c</fullName>
        <label>Barred List Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Batch_Reference__c</fullName>
        <label>Batch Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Biometric_Residence_Permit_BRP_Seen__c</fullName>
        <label>Biometric Residence Permit (BRP) Seen</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Biometric_URL__c</fullName>
        <defaultValue>&quot;https://eforms.homeoffice.gov.uk/outreach/righttowork.ofml&quot;</defaultValue>
        <label>Biometric URL Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CV_Gaps__c</fullName>
        <label>CV Gaps</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CV_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CV Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CV_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CV Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CV_submitted_Date__c</fullName>
        <label>CV submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Candidate_Compliance_Status__c</fullName>
        <description>Compliance Status from Candidate People record</description>
        <formula>TEXT(TR1__Contact__r.Compliance_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Compliance Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Owner_Email__c</fullName>
        <label>Candidate Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Change_Of_Name__c</fullName>
        <label>Change Of Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By Marriage</fullName>
                </value>
                <value>
                    <fullName>By Deed</fullName>
                </value>
                <value>
                    <fullName>By Divorce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Choice_of_Country__c</fullName>
        <label>Choice of Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Abu Dhabi (UAE)</fullName>
                </value>
                <value>
                    <fullName>Ajman (UAE)</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Dubai (UAE)</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Fujairah</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Ghana</fullName>
                </value>
                <value>
                    <fullName>Great Britain</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Greenland</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>Iceland</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Isle Of Man</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clear_DBS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clear DBS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clearance_Status__c</fullName>
        <label>Clearance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Reg</fullName>
                </value>
                <value>
                    <fullName>Not Reg - Screen Complete</fullName>
                </value>
                <value>
                    <fullName>Not Cleared</fullName>
                </value>
                <value>
                    <fullName>Perm</fullName>
                </value>
                <value>
                    <fullName>Future Candidate Pool</fullName>
                </value>
                <value>
                    <fullName>Cleared</fullName>
                </value>
                <value>
                    <fullName>Reclear</fullName>
                </value>
                <value>
                    <fullName>Cleared Pending DBS</fullName>
                </value>
                <value>
                    <fullName>File Out</fullName>
                </value>
                <value>
                    <fullName>File Out DNC</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Non- Compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cleared_Pending_Docs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleared Pending Docs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ComplianceStatus__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Id+&apos;/e&apos;,


CASE(TEXT( TR1__Status__c ),
&apos;Requested&apos;, IMAGE(&apos;/resource/ComplianceImages/No.png&apos;, TEXT( TR1__Status__c ), 20, 70) ,
&apos;Active&apos;, IMAGE(&apos;/resource/ComplianceImages/Yes.png&apos;, &apos;Approved&apos;, 20, 70) ,
&apos;Submitted&apos;, IMAGE(&apos;/resource/ComplianceImages/RV.png&apos;, &apos;Requires Verification&apos;, 20, 70),
&apos;In Progress&apos;, IMAGE(&apos;/resource/ComplianceImages/MR.png&apos;, &apos;More Required&apos;, 20, 70),
&apos;Rejected&apos;, IMAGE(&apos;/resource/ComplianceImages/No.png&apos;, TEXT( TR1__Status__c ), 20, 70),
&apos;Expired&apos;, IMAGE(&apos;/resource/ComplianceImages/RV.png&apos;, &apos;Requires Verification&apos;, 20, 70)
,IMAGE(&apos;/resource/ComplianceImages/No.png&apos;, &apos;None&apos;, 20, 70))


,&apos;_parent&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visual (Status)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Status__c</fullName>
        <label>Compliance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Registered</fullName>
                </value>
                <value>
                    <fullName>Vet Complete</fullName>
                </value>
                <value>
                    <fullName>Vet Perm</fullName>
                </value>
                <value>
                    <fullName>Vet FLTP</fullName>
                </value>
                <value>
                    <fullName>Interview Complete</fullName>
                </value>
                <value>
                    <fullName>Not Clear</fullName>
                </value>
                <value>
                    <fullName>Clearance Pending</fullName>
                </value>
                <value>
                    <fullName>Cleared</fullName>
                </value>
                <value>
                    <fullName>Not Compliant</fullName>
                </value>
                <value>
                    <fullName>Stopped</fullName>
                </value>
                <value>
                    <fullName>Interview Complete Missing Docs</fullName>
                </value>
                <value>
                    <fullName>Interview Complete - Overseas</fullName>
                </value>
                <value>
                    <fullName>Cleared Pending Docs</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Candidate Submission (Requires Verification)</fullName>
                    <isActive>false</isActive>
                    <label>Candidate Submission (Requires Verification)</label>
                </value>
                <value>
                    <fullName>Expired</fullName>
                    <isActive>false</isActive>
                    <label>Expired</label>
                </value>
                <value>
                    <fullName>More Required</fullName>
                    <isActive>false</isActive>
                    <label>More Required</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Non-Applicable</fullName>
                    <isActive>false</isActive>
                    <label>Non-Applicable</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <isActive>false</isActive>
                    <label>Rejected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consent_Received__c</fullName>
        <label>Consent Received?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <formula>TEXT(TR1__Contact__r.TR1__Candidate_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Candidate Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <inlineHelpText>If the country is not in EU, EEA, then candidate must fill in Visa section</inlineHelpText>
        <label>Country of Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBA_Status__c</fullName>
        <label>DBA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clear</fullName>
                </value>
                <value>
                    <fullName>Not Clear</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBA_Submitted_Date__c</fullName>
        <label>DBA Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DBS_Barred_List_Status__c</fullName>
        <label>DBS Barred List Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DBS_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adults Barred List  - Not Requested</fullName>
                </value>
                <value>
                    <fullName>Adults Barred List  - Non Recorded</fullName>
                </value>
                <value>
                    <fullName>Adults Barred List  - Information Recorded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBS_Checked_Online__c</fullName>
        <label>DBS Last Checked Online</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DBS_Counter_Signatory__c</fullName>
        <label>DBS Counter Signatory</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBS_Date_of_Issue__c</fullName>
        <label>DBS Date of Issue (Old)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DBS_Deduction_Date__c</fullName>
        <label>DBS Deduction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DBS_Deduction_Status__c</fullName>
        <label>DBS Deduction Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exempt (Central Cost)</fullName>
                </value>
                <value>
                    <fullName>Yes (Candidate To Pay)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBS_Disclosure_ID_Number__c</fullName>
        <label>DBS Disclosure ID Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBS_Disclosure_Notes__c</fullName>
        <label>DBS Disclosure Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBS_Disclosure_Status__c</fullName>
        <label>DBS Disclosure Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>Dispute</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBS_Disclosure_Submitted__c</fullName>
        <label>DBS Disclosure Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DBS_Disclosure_Unique_Ref_Number__c</fullName>
        <label>DBS Disclosure Unique Ref Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBS_Disclosure_Valid_From__c</fullName>
        <label>DBS Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DBS_Expiry_Date_New__c</fullName>
        <label>DBS Expiry Date (New)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DBS_Expiry_Date__c</fullName>
        <description>DBS Issue Date + 3 Years</description>
        <formula>IF(
  AND(
    MONTH(DBS_Disclosure_Valid_From__c) = 2,
    DAY(DBS_Disclosure_Valid_From__c) = 29,
    NOT( 
      OR( 
        MOD(YEAR(DBS_Disclosure_Valid_From__c ), 400 ) = 0, 
        AND( 
          MOD(YEAR(DBS_Disclosure_Valid_From__c), 4 ) = 0,
          MOD(YEAR(DBS_Disclosure_Valid_From__c), 100 ) != 0
        )
      )
    ) 
  ),
  DATE(YEAR(DBS_Disclosure_Valid_From__c) + 1, 3, 1),
  DATE(YEAR(DBS_Disclosure_Valid_From__c) + 1 , MONTH(DBS_Disclosure_Valid_From__c), DAY(DBS_Disclosure_Valid_From__c) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DBS Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DBS_Form_Number__c</fullName>
        <label>DBS Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBS_Next_Check_Required__c</fullName>
        <inlineHelpText>Please enter the expiry date of current DBS as this is when next check is required</inlineHelpText>
        <label>DBS Next Check Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DBS_Original_Sited__c</fullName>
        <label>DBS Original Sited</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DBS_Payment_Date__c</fullName>
        <label>DBS Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DBS_Payment_Type__c</fullName>
        <label>DBS Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Deducted From Wage</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>Postal Order</fullName>
                </value>
                <value>
                    <fullName>Bank Transfer</fullName>
                </value>
                <value>
                    <fullName>Job Centre Voucher</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>PayPal</fullName>
                </value>
                <value>
                    <fullName>Welsh Council</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBS_Submitted_Date__c</fullName>
        <label>DBS Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DBS_Tracking_Number__c</fullName>
        <label>DBS Tracking Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBS_Type__c</fullName>
        <inlineHelpText>For Child &amp; Adult Workforce DBS, &apos;Adult&apos; section must be populated or Non Recorded</inlineHelpText>
        <label>DBS Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Enhanced_DBS__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enhanced</fullName>
                </value>
                <value>
                    <fullName>Child Workforce</fullName>
                </value>
                <value>
                    <fullName>Child &amp; Adult Workforce</fullName>
                </value>
                <value>
                    <fullName>Adults Barred List - Not Requested</fullName>
                </value>
                <value>
                    <fullName>Adults Barred List - Non Recorded</fullName>
                </value>
                <value>
                    <fullName>Adults Barred List - Information Recorded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBS_Update_Service_URL__c</fullName>
        <defaultValue>&quot;https://secure.crbonline.gov.uk/crsc/check?execution=e1s1&quot;</defaultValue>
        <label>DBS Update Service URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DBS_Update_Service__c</fullName>
        <inlineHelpText>https://securecrbonline.gov.uk/crsc/check?execution=e1s1</inlineHelpText>
        <label>DBS Update Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DBS_sighted__c</fullName>
        <label>DBS Original Sighted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DFE_Secure_Access__c</fullName>
        <defaultValue>&apos;https://sa.education.gov.uk/idp/endOfSession?SystemId=SAFE&amp;Status=DisabledCookiesWarning&apos;</defaultValue>
        <label>DFE Secure Access</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Data_Protection_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Protection Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Cleared__c</fullName>
        <label>Date Cleared</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Qualified__c</fullName>
        <label>Date Qualified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Recleared__c</fullName>
        <label>Date Recleared</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Visa_Seen__c</fullName>
        <inlineHelpText>If candidate requires a visa, date visa was sighted must be entered here.</inlineHelpText>
        <label>Visa Seen</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <formula>TR1__Contact__r.Date_of_Birth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Interview__c</fullName>
        <label>Date of Interview</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disqualification_by_Association_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disqualification by Association Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocuSign_Template_ID__c</fullName>
        <formula>TR1__Qualification__r.TR1__Docusign_Template_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DocuSign Template ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documents__c</fullName>
        <label>Documents</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Permanent_Right_to_Work_in_UK__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UK Passport</fullName>
                </value>
                <value>
                    <fullName>EEA or Swiss Passport/ National Identity Card</fullName>
                </value>
                <value>
                    <fullName>Perm Residence Registration Certificate EEA or Swiss</fullName>
                </value>
                <value>
                    <fullName>Perm Residence Card</fullName>
                </value>
                <value>
                    <fullName>Current Biometric Immigration Doc (Resident Permit)</fullName>
                </value>
                <value>
                    <fullName>Passport with Indefinite Right to Remain</fullName>
                </value>
                <value>
                    <fullName>Current H.O. Immigration Status Doc + Perm NI No. Doc</fullName>
                </value>
                <value>
                    <fullName>Full UK Birth or Adoption Certificate + National Insurance Doc</fullName>
                </value>
                <value>
                    <fullName>Birth/Adopt Cert (Iss: Chanel Isle/ Isle of Man/ Ireland) + NI Doc</fullName>
                </value>
                <value>
                    <fullName>Cert of Registration/ Naturalisation as a British Citizen + NI Doc</fullName>
                </value>
                <value>
                    <fullName>Current Passport Showing Holder Can Stay in UK &amp; Do the Work in Qu</fullName>
                </value>
                <value>
                    <fullName>Current Residence Card</fullName>
                </value>
                <value>
                    <fullName>Current Immigration Status Doc + National Insurance Doc</fullName>
                </value>
                <value>
                    <fullName>Positive Verification Notice + Certificate of Application</fullName>
                </value>
                <value>
                    <fullName>Application Registration Card + Positive Verification notice</fullName>
                </value>
                <value>
                    <fullName>Positive Verification Notice</fullName>
                </value>
                <value>
                    <fullName>Small UK Birth or Adoption Certificate + National Insurance Doc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documents_sighted_by_third_party__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documents sighted by third party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EEA_Passport__c</fullName>
        <inlineHelpText>If the EEA Passport is from Croatia, Candidate must fill in the Visa Section.</inlineHelpText>
        <label>EEA Passport</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Other EEA Country</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EU_Settlement_confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EU Settlement confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EWC_Expiry_Date__c</fullName>
        <formula>EWC__c +366</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EWC Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EWC_Registration_Checked_Date__c</fullName>
        <label>EWC Registration Checked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EWC__c</fullName>
        <label>EWC Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EYTS_Check_URL__c</fullName>
        <defaultValue>&quot;earlyyearsteachers.nctl@education.gsi.gov.uk&quot;</defaultValue>
        <label>EYTS Check URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EYTS_Checked_Date__c</fullName>
        <label>EYTS Checked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EYTS_Expiry__c</fullName>
        <formula>EYTS_Checked_Date__c + 366</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EYTS Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EYTS_Status__c</fullName>
        <inlineHelpText>EYTS status can only be marked as registered when EYTS check has been returned.</inlineHelpText>
        <label>EYTS Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Not Registered</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EY_Prohib_Date_Checked__c</fullName>
        <label>Prohibition Order Date Checked - EYFS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Address__c</fullName>
        <label>Emergency Contact Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Home_Phone__c</fullName>
        <label>Emergency Contact Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Mobile_Phone__c</fullName>
        <label>Emergency Contact Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Name__c</fullName>
        <label>Emergency Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Work_Phone__c</fullName>
        <label>Emergency Contact Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Enhanced_DBS__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If Standard, a new Enhanced DBS needs to be applied for.</inlineHelpText>
        <label>Enhanced DBS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Face_to_Face_Interview_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Face to Face Interview Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gaps_Explanation__c</fullName>
        <label>Gaps Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group1_ID_Received_Date__c</fullName>
        <label>Group 1 ID Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_1_Date_SIghted__c</fullName>
        <label>Group 1 Date Sighted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_1_Doc_Sighted_By_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group 1 Doc Sighted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Associated_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>